style.css
body {
    text-align: center;
    background-color: lightgray;
}

h1 {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 50px;
}

.orange {
    background-color: orange;
}

button:hover:not(#equal, #clear, #delete) {
    background-color: white;
    transform: scale(1.01);
}

#equal:hover {
    background-color: lightgreen;
    transform: scale(1.01);
}

#clear:hover, #delete:hover {
    background-color: lightcoral;
    transform: scale(1.01);
}

.container1 {
    border: 4px solid black;
    width: 400px;
    height: 550px;
    margin: auto;
    background-color: darkblue;
}

#screen {
    border: 2px solid red;
    grid-area: screen;
    width: 95%;
    height: 25%;
    margin: 10px;
    background-color: lightblue;
    text-align: right;
}

#results {
    font-size: 40px;

}

#calculation {
    font-size: 65px;
    margin-top: auto;
}

.btn {
    display: flex;
    justify-content: center;
    align-items: center;
    justify-self: center;
}

.btn{
    width: 77.5px;
    height: 77.5px;
    font-size: 25px;
    border-radius: 50%;
}

.btns{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    /* margin: 0px 40px; */
}

.start_up {
    opacity: 0;
}

#error {
    font-family: Arial, Helvetica, sans-serif;
    width: 400px;
    height: auto;
    margin: auto;
    text-align: center;
    font-size: 30px;
    font-weight: 500;
    color: orange;
    margin-top: 20px;
    text-shadow: 2px 2px black;
}

